WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250945
Fix misc compiler warnings, January 2023 edition
https://bugs.webkit.org/show_bug.cgi?id=250945
Summary
Fix misc compiler warnings, January 2023 edition
Michael Catanzaro
Reported
2023-01-21 14:39:42 PST
It's been a long time since the last round of these, since warnings on EWS are fatal now, which is saving me a lot of effort. But today I decided to try building with Clang instead of GCC, and it found some problems that GCC misses.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-01-21 14:41:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8928
EWS
Comment 2
2023-01-22 07:36:54 PST
Committed
259183@main
(0b614af95032): <
https://commits.webkit.org/259183@main
> Reviewed commits have been landed. Closing PR #8928 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug