Fix misc compiler warnings, January 2023 edition https://bugs.webkit.org/show_bug.cgi?id=250945

Reviewed by Philippe Normand.

It's been a long time since my last round of warning fixes, since
warnings on EWS are fatal now, which is saving me a lot of effort. But
today I decided to try building with Clang instead of GCC, and it found
some problems that GCC misses.

* Source/JavaScriptCore/ftl/FTLOperations.cpp:
(JSC::FTL::JSC_DEFINE_JIT_OPERATION):
* Source/ThirdParty/xdgmime/CMakeLists.txt:
* Source/WebCore/page/scrolling/nicosia/ScrollingTreePositionedNodeNicosia.h:
* Source/WebCore/platform/audio/AudioUtilities.cpp:
(WebCore::AudioUtilities::timeToSampleFrame):
* Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTakeViewSnapshot):
* Source/WebKit/UIProcess/gtk/ViewGestureControllerGtk.cpp:
(WebKit::ViewGestureController::beginSwipeGesture):
(WebKit::ViewGestureController::snapshot):
* Source/WebKit/WebProcess/InjectedBundle/API/glib/WebKitFrame.cpp:
(webkitFrameGetJSCValuesForElementsInWorld):
* Tools/TestWebKitAPI/Tests/WebKitGtk/TestContextMenu.cpp:

Canonical link: https://commits.webkit.org/259183@main