Source/WebCore/platform/audio/AudioUtilities.cpp
@@ -69,7 +69,7 @@ size_t timeToSampleFrame(double time, double sampleRate, SampleFrameRounding rou
     }
 
     // Just return the largest possible size_t value if necessary.
-    if (frame >= std::numeric_limits<size_t>::max())
+    if (frame >= static_cast<double>(std::numeric_limits<size_t>::max()))
         return std::numeric_limits<size_t>::max();
 
     return static_cast<size_t>(frame);
